changed font size of stop names in my stops, finalized button css for edit/delete review in my reviews, shifted search bar on All Stops page

--- a/front_end/src/index.css
+++ b/front_end/src/index.css
@@ -1,3 +1,5 @@
+@import '~bootstrap-icons/font/bootstrap-icons';
+
 /* Base Styles */
 * {
   margin: 0;
@@ -218,8 +220,17 @@ a:hover {
 .tab-pane, .stop-list, .my-reviews, .edit-review-form textarea {
   width: 100%;
 }
+.user-review-preview h2 {
+  font-size: 40px;
+}
 .stop-list button, .my-reviews button {
   margin-top: 18px;
+}
+.my-reviews button {
+  margin-right: 10px;
+}
+#edit-review-text-input {
+  font-family: "Roboto Condensed";
 }
 .modal-header {
   border-bottom-width: 2px;
@@ -241,7 +252,6 @@ a:hover {
   display: inline;
   width: 40%;
   margin-bottom: 20px;
-  margin-left: 13px;
 }
 
 
